--- a/style.css
+++ b/style.css
@@ -2,4 +2,100 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Helvetica, sans-serif;
+}
+
+body {
+    background-color: cornflowerblue;
+}
+/* Header */
+
+header {
+    height: 70px;
+    display: flex;
+    background-color: white;
+}
+
+.left-header {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    margin-left: 100px;
+}
+
+.left-header img {
+    width: 60px;
+    height: auto;
+}
+
+h1 {
+    font-size: 1.5rem;
+}
+
+.right-header {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    margin-right: 100px;
+}
+
+select {
+    margin: 0 10px;
+    width: 120px;
+    background-color: transparent;
+    border: 1px solid black;
+    padding: 1px;
+}
+
+button {
+    width: 100px;
+    padding: 1px;
+    cursor: pointer;
+}
+
+/* Main */
+.container {
+    width: 400px;
+    height: 400px;
+    margin: 30px auto;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.square {
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+    border: 1px solid black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.square.active {
+    background-color: bisque;
+    color: black;
+}
+/* Header */
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+footer span {
+    margin-left: 100px;
+    font-size: 0.8rem;
+}
+
+footer a {
+    color: black;
 }
