--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ button {
 
 .container h2 {
     color: white;
+    width: 80%;
+    text-align: center;
 }
 
 .square10 {
@@ -78,6 +80,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.7rem;
 }
 
 .square9 {
@@ -88,6 +91,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.8rem;
 }
 
 .square7 {
@@ -98,6 +102,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.9rem;
 }
 
 .active {
