--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ button {
     align-items: center;
     justify-content: center;
     font-size: 0.7rem;
+    cursor: url(img/mina\ pointer.png), pointer;
 }
 
 .square9 {
@@ -92,6 +93,7 @@ button {
     align-items: center;
     justify-content: center;
     font-size: 0.8rem;
+    cursor: url(img/mina\ pointer.png), pointer;
 }
 
 .square7 {
@@ -103,6 +105,7 @@ button {
     align-items: center;
     justify-content: center;
     font-size: 0.9rem;
+    cursor: url(img/mina\ pointer.png), pointer;
 }
 
 .active {
