--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@
 }
 
 body {
-    background-color: cornflowerblue;
+    background-color: #427BE3;
 }
 
 /* Header */
 header {
-    height: 70px;
+    height: 10vh;
+    min-height: 60px;
     display: flex;
     background-color: white;
 }
@@ -55,10 +56,16 @@ button {
 }
 
 /* Main */
+main {
+    background-color: #427BE3;
+    height: 85vh;
+    padding-top: 40px;
+}
+
 .container {
     width: 400px;
     height: 400px;
-    margin: 30px auto;
+    margin: 0 auto;
     border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
@@ -83,6 +90,8 @@ button {
     justify-content: center;
     font-size: 0.7rem;
     cursor: url(img/mina\ pointer.png), pointer;
+    box-shadow: inset 0px 0px 2px 0px #000000;
+    background-color: #d86500;
 }
 
 .square9 {
@@ -95,6 +104,8 @@ button {
     justify-content: center;
     font-size: 0.8rem;
     cursor: url(img/mina\ pointer.png), pointer;
+    box-shadow: inset 0px 0px 2px 0px #000000;
+    background-color: #d86500;
 }
 
 .square7 {
@@ -107,10 +118,12 @@ button {
     justify-content: center;
     font-size: 0.9rem;
     cursor: url(img/mina\ pointer.png), pointer;
+    box-shadow: inset 0px 0px 2px 0px #000000;
+    background-color: #d86500;
 }
 
 .active {
-    background-color: bisque;
+    background-color: #FFD20E;
     color: black;
 }
 
@@ -120,8 +133,9 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 40px;
-    background-color: white;
+    height: 5vh;
+    min-height: 20px;
+    background-color: white; 
     display: flex;
     align-items: center;
 }
