--- a/style.css
+++ b/style.css
@@ -127,6 +127,21 @@ main {
     color: black;
 }
 
+.exploded {
+    background-color: rgb(212, 8, 8);
+    color: black;
+}
+
+#fine-gioco {
+    width: 800px;
+    margin: 0 auto;
+    color: white;
+    margin-top: 10px;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-align: center;
+}
+
 /* Header */
 footer {
     position: fixed;
