--- a/style.css
+++ b/style.css
@@ -72,6 +72,14 @@ main {
     justify-content: center;
     align-items: center;
     box-shadow: 2px 2px 10px 0px #000000;
+    /* rendo il testo non selezionabile */
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .container h2 {
