--- a/style.css
+++ b/style.css
@@ -72,14 +72,6 @@ main {
     justify-content: center;
     align-items: center;
     box-shadow: 2px 2px 10px 0px #000000;
-    /* rendo il testo non selezionabile */
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .container h2 {
@@ -92,7 +84,7 @@ main {
     width: calc(100% / 10);
     height: calc(100% / 10);
     border: 1px solid black;
-    color: #d86500;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -106,7 +98,7 @@ main {
     width: calc(100% / 9);
     height: calc(100% / 9);
     border: 1px solid black;
-    color: #d86500;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,7 +112,7 @@ main {
     width: calc(100% / 7);
     height: calc(100% / 7);
     border: 1px solid black;
-    color: #d86500;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -131,28 +123,8 @@ main {
 }
 
 .active {
-    background-color: #ffd20d;
-    color: black;   
-    font-size: 1.2rem;
-    font-weight: 900;
-}
-
-.exploded {
-    background-image: url(img/explosion.jpg);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: transparent;
-}
-
-#fine-gioco {
-    width: 800px;
-    margin: 0 auto;
-    color: white;
-    margin-top: 10px;
-    text-transform: uppercase;
-    font-weight: 600;
-    text-align: center;
+    background-color: #FFD20E;
+    color: black;
 }
 
 /* Header */
